--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Akash Bhati - Web Developer Portfolio</title>
+    <title>Akash Kumar - Web Developer Portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./styles.css">
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <div class="container">
-            <a class="navbar-brand" href="#">Akash Bhati</a>
+            <a class="navbar-brand" href="#">Akash Kumar</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -36,8 +36,8 @@
 
     <section id="home" class="hero">
         <div class="container text-center">
-            <img width="150px" height="150px" src="https://images.pexels.com/photos/27741970/pexels-photo-27741970/free-photo-of-man-with-camera-on-beach.jpeg?auto=compress&cs=tinysrgb&w=150&h=150&dpr=1" alt="Akash Bhati" class="rounded-circle mb-4">
-            <h1 class="display-4">Akash Bhati</h1>
+            <img width="150px" height="150px" src="https://images.pexels.com/photos/27741970/pexels-photo-27741970/free-photo-of-man-with-camera-on-beach.jpeg?auto=compress&cs=tinysrgb&w=150&h=150&dpr=1" alt="Akash Kumar" class="rounded-circle mb-4">
+            <h1 class="display-4">Akash Kumar</h1>
             <p class="lead">Web Developer & Designer</p>
             <a href="#contact" class="btn btn-primary btn-lg mt-3">Get in Touch</a>
         </div>
@@ -49,7 +49,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <h3>Background</h3>
-                    <p>Hello! I'm Akash Bhati, a passionate web developer with a keen eye for design and a love for creating seamless user experiences. With a strong foundation in HTML, CSS, and JavaScript, I specialize in building responsive and interactive websites that make an impact.</p>
+                    <p>Hello! I'm Akash Kumar, a passionate web developer with a keen eye for design and a love for creating seamless user experiences. With a strong foundation in HTML, CSS, and JavaScript, I specialize in building responsive and interactive websites that make an impact.</p>
                 </div>
                 <div class="col-md-6">
                     <h3>Skills</h3>
@@ -101,7 +101,7 @@
 
     <footer class="bg-dark text-white py-4">
         <div class="container text-center">
-            <p>&copy; 2023 Akash Bhati. All rights reserved.</p>
+            <p>&copy; 2023 Akash Kumar. All rights reserved.</p>
             <div class="mt-3">
                 <a href="#" class="text-white me-3"><i class="bi bi-linkedin"></i></a>
                 <a href="#" class="text-white me-3"><i class="bi bi-github"></i></a>
